build/resources/test/LO-2/ValidPrograms/test_69.lo
// *Good testcase*
// Arithmetic Operations
// main return value: 100098
// Author: Tyler Collins


int main() {
    int a, b, c, d;
  {
    a = 1;
    b = 10;
    c = 100;
    d = 1000;

    return (((((d * d) / b) + c) - 2) * a);
  }
}

