build/resources/test/LO-2/InvalidPrograms/test_10.lo
// Missing operand

bool main(){
  int a, b;
  {
    a = 39;
    b = 15;
    return ((a = 1) ? : b);
  }
}